src/objects/Exception_Log__c.object
<CustomObject>
    <description>This object will record all exceptions that will occur within the system</description>
    <fields>
        <fullName>Class_Name__c</fullName>
        <description>Identifies which class caused the exception</description>
        <label>Class Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <description>Logs the exception message generated by the system</description>
        <label>Exception</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Method_Name__c</fullName>
        <description>Identifies which method in the class caused the exception</description>
        <label>Method Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_ID__c</fullName>
        <description>Record ID wherein the exception occurred</description>
        <label>Salesforce ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Identifies whether the exception was caused by a general error or web services</description>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Web Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Exception Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Salesforce_ID__c</columns>
        <columns>Type__c</columns>
        <columns>Class_Name__c</columns>
        <columns>Method_Name__c</columns>
        <columns>Exception__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>General</fullName>
        <columns>NAME</columns>
        <columns>Salesforce_ID__c</columns>
        <columns>Class_Name__c</columns>
        <columns>Method_Name__c</columns>
        <columns>Exception__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>General</value>
        </filters>
        <label>General</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Today</fullName>
        <columns>NAME</columns>
        <columns>Salesforce_ID__c</columns>
        <columns>Type__c</columns>
        <columns>Class_Name__c</columns>
        <columns>Method_Name__c</columns>
        <columns>Exception__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>E-{0000000}</displayFormat>
        <label>Exception Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>